# GlfwEmptyApp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
src/main/: main.cpp
src/pch/: pch.h
